--- a/addbooks.html
+++ b/addbooks.html
@@ -13,13 +13,13 @@
 </head>
 
 <body>
-    <!-- <header>
+    <header>
         <img src="imgs/logo.png" alt="logo image">
         <ul class="nav-links">
-            <li><a href="#" class="active">Home</a></li>
-            <li><a href="#">Gallery</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Add books</a></li>
+            <li><a href="index.html" >Home</a></li>
+            <li><a href="Gallery.html">Gallery</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="addbooks.html" class="active">Add books</a></li>
         </ul>
         <ul class="nav-icons-sc">
             <li>
@@ -38,11 +38,13 @@
                 </a>
             </li>
         </ul>
-    </header> -->
+    </header>
 
-    <img src="imgs/bestselling.png" alt="">
+    <img src="imgs/OTHERBOOKS.png" alt="" style="padding-top: 80px;">
     <main class="class_main">
-        <img class="book_img" style="width:500px;height:600px;" src="imgs/book2.png" alt="">
+       <div id="book_div">
+            <img class="book_img" style="width:400px;height:600px;" src="imgs/book2.png" alt="">
+       </div>
         <section>
             <form >
                 <label>Title:</label><br>
@@ -62,7 +64,7 @@
         <button class="btnn btn1" type="button" >SAVE</button>
         <button class="btnn btn2" type="button" >DELETE</button>
     </div>
-    <!-- <footer>
+    <footer>
 
         <div class="company">
             <h3 class="titles">Ebook<span>s</span></h3>
@@ -89,7 +91,7 @@
             </div>
         </div>
 
-    </footer> -->
+    </footer>
 </body>
 <!-- js here -->
 <script src="js/sandbox.js"></script>
