--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
             <li><a href="index.html" >Home</a></li>
             <li><a href="#">Gallery</a></li>
             <li><a href="contact.html" class="active">Contact</a></li>
-            <li><a href="#">Add books</a></li>
+            <li><a href="addbooks.html">Add books</a></li>
         </ul>
         <ul class="nav-icons-sc">
             <li>
@@ -44,7 +44,9 @@
 
     <section style="padding-top: 80px;">
         <div>
-            <h1>Contact Us</h1>
+            <div class="contuct">
+                <img  class="cont_img" src="imgs/contuct.png" alt="">   
+            </div>       
             <hr>
             <hr>
             <br>
