--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
     <link rel="stylesheet" href="sass/style.css">
     <link rel="stylesheet" href="sass/Contact.css">
+    
     <!-- SEO HERE -->
     <title>BookStore</title>
 </head>
@@ -20,6 +21,7 @@
             <li><a href="#">Gallery</a></li>
             <li><a href="contact.html" class="active">Contact</a></li>
             <li><a href="addbooks.html">Add books</a></li>
+            <li><a href="addbook.html" >Add book</a></li>
         </ul>
         <ul class="nav-icons-sc">
             <li>
